# Cybersecurity-Projects

./: .gitignore  .pre-commit-config.yaml  README.md
PROJECTS/advanced/ai-threat-detection/backend/: alembic.ini  pyproject.toml
PROJECTS/advanced/ai-threat-detection/backend/alembic/: env.py  script.py.mako
PROJECTS/advanced/ai-threat-detection/backend/alembic/versions/: 65c8ac60f6f6_initial_schema.py
PROJECTS/advanced/ai-threat-detection/backend/app/: __init__.py  __main__.py  config.py  factory.py  main.py
PROJECTS/advanced/ai-threat-detection/backend/app/api/: __init__.py  deps.py  health.py  ingest.py  models_api.py  stats.py  threats.py  websocket.py
PROJECTS/advanced/ai-threat-detection/backend/app/core/: __init__.py  redis_manager.py
PROJECTS/advanced/ai-threat-detection/backend/app/models/: __init__.py  base.py  model_metadata.py  threat_event.py
PROJECTS/advanced/ai-threat-detection/backend/app/schemas/: __init__.py  stats.py  threats.py  websocket.py
PROJECTS/advanced/ai-threat-detection/backend/app/services/: __init__.py  stats_service.py  threat_service.py
PROJECTS/advanced/ai-threat-detection/backend/cli/: __init__.py  main.py
PROJECTS/advanced/ai-threat-detection/backend/data/models/: ae.onnx  ae.onnx.data  if.onnx  rf.onnx  scaler.json  threshold.json
PROJECTS/advanced/ai-threat-detection/backend/ml/: __init__.py  autoencoder.py  data_loader.py  download_csic.py  experiment.py  export_onnx.py  metadata.py  orchestrator.py  scaler.py  splitting.py  synthetic.py  train_autoencoder.py  train_classifiers.py  validation.py
PROJECTS/advanced/ai-threat-detection/backend/tests/: __init__.py  conftest.py  test_api.py  test_autoencoder.py  test_cli.py  test_config_ml.py  test_data_loader.py  test_detection.py  test_ensemble.py  test_experiment.py  test_export_onnx.py  test_features.py  test_geoip.py  test_inference.py  test_integration.py  test_metadata.py  test_ml_integration.py  test_orchestrator.py  test_parsers.py  test_pipeline.py  test_scaler.py  test_splitting.py  test_synthetic.py  test_training.py  test_training_e2e.py  test_validation.py
PROJECTS/advanced/api-rate-limiter/: pyproject.toml
PROJECTS/advanced/bug-bounty-platform/backend/: pyproject.toml
PROJECTS/advanced/encrypted-p2p-chat/backend/: pyproject.toml
PROJECTS/advanced/encrypted-p2p-chat/backend/alembic/: env.py
PROJECTS/advanced/encrypted-p2p-chat/backend/app/: config.py  factory.py
PROJECTS/advanced/encrypted-p2p-chat/backend/app/api/: auth.py  encryption.py  rooms.py  websocket.py
PROJECTS/advanced/encrypted-p2p-chat/backend/app/models/: User.py  (+4 more)
PROJECTS/advanced/encrypted-p2p-chat/backend/tests/: conftest.py  test_auth_service.py  test_prekey_service.py  test_session_auth.py
PROJECTS/advanced/haskell-reverse-proxy/: aenebris.cabal
PROJECTS/advanced/haskell-reverse-proxy/app/: Main.hs
PROJECTS/advanced/haskell-reverse-proxy/scripts/: regen_lgbm_fixture.py
PROJECTS/advanced/haskell-reverse-proxy/src/Aenebris/: Backend.hs  Config.hs  Geo.hs  HealthCheck.hs  Honeypot.hs  LoadBalancer.hs  Proxy.hs  RateLimit.hs
PROJECTS/advanced/haskell-reverse-proxy/test/: Spec.hs
PROJECTS/advanced/rveng/: .dockerignore  .gitignore  README.md  compose.yml  dev.compose.yml  install.sh  justfile  pyproject.toml  uninstall.sh
PROJECTS/advanced/rveng/challenges/01-read-the-hex/: challenge.json
PROJECTS/advanced/rveng/challenges/02-find-the-entry/: challenge.json
PROJECTS/advanced/rveng/challenges/03-flip-the-gate/: challenge.json  source.c
PROJECTS/advanced/rveng/challenges/04-name-the-function/: challenge.json
PROJECTS/advanced/rveng/challenges/05-find-the-gate/: challenge.json
PROJECTS/advanced/rveng/challenges/06-stripped-gate/: challenge.json
PROJECTS/advanced/rveng/docs/research/: 01-elf-format.md  02-x86-64-capstone.md  03-pedagogy.md  04-no-execution-posture.md  05-static-analysis.md  INDEX.md
PROJECTS/advanced/rveng/frontend/: .dockerignore  .env.example  .gitignore  biome.json  index.html  package.json  vite.config.ts
PROJECTS/advanced/rveng/frontend/src/: App.tsx  config.ts  main.tsx  styles.scss
PROJECTS/advanced/rveng/infra/docker/: api.dockerfile  vite.dev  vite.prod
PROJECTS/advanced/rveng/infra/nginx/: dev.nginx  prod.nginx
PROJECTS/advanced/rveng/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
PROJECTS/advanced/rveng/src/rveng/: __init__.py
PROJECTS/advanced/rveng/tests/: conftest.py  test_api.py  test_cfg.py  test_challenge.py  test_disasm.py  test_discover.py  test_elf.py  test_hex.py  test_patch.py  test_plt.py  test_progress.py  test_robustness.py  test_strings.py  test_xref.py
PROJECTS/advanced/rveng/tests/fixtures/: gate  gate_stripped
PROJECTS/beginner/hash-cracker/: CMakeLists.txt  main.cpp
PROJECTS/beginner/hash-cracker/learn/: 00-OVERVIEW.md  01-CONCEPTS.md  02-ARCHITECTURE.md  03-IMPLEMENTATION.md  04-CHALLENGES.md
PROJECTS/beginner/hash-cracker/src/attack/: BruteForceAttack.cpp  BruteForceAttack.hpp  DictionaryAttack.cpp  DictionaryAttack.hpp  RuleAttack.cpp  RuleAttack.hpp
PROJECTS/beginner/hash-cracker/src/config/: Config.hpp
PROJECTS/beginner/hash-cracker/src/core/: Concepts.hpp  Engine.hpp
PROJECTS/beginner/hash-cracker/src/display/: Progress.cpp  Progress.hpp
PROJECTS/beginner/hash-cracker/src/hash/: EVPHasher.hpp  HashDetector.cpp  HashDetector.hpp  MD5Hasher.cpp  MD5Hasher.hpp  SHA1Hasher.cpp  SHA1Hasher.hpp  SHA256Hasher.cpp  SHA256Hasher.hpp  SHA512Hasher.cpp  SHA512Hasher.hpp
PROJECTS/beginner/hash-cracker/src/io/: MappedFile.cpp  MappedFile.hpp
PROJECTS/beginner/hash-cracker/src/rules/: RuleSet.cpp  RuleSet.hpp
PROJECTS/beginner/hash-cracker/src/threading/: ThreadPool.cpp  ThreadPool.hpp
PROJECTS/beginner/hash-cracker/tests/: test_bruteforce_attack.cpp  test_dictionary_attack.cpp  test_engine.cpp  test_hash_detector.cpp  test_hashers.cpp  test_rules.cpp
PROJECTS/beginner/keylogger/: keylogger.py  pyproject.toml
PROJECTS/beginner/network-traffic-analyzer/cpp/: CMakeLists.txt  CMakePresets.json  Justfile  README.md  install.sh  main.cpp
(+588 files in other folders)
