cabal-version:       2.2

name:                aenebris
version:             0.1.0.0
synopsis:            Next Gen Intelligent Reverse Proxy
description:         Ᾰenebris - Security first reverse proxy with ML based threat detection
homepage:            https://github.com/CarterPerez-dev/Cybersecurity-Projects/PROJECTS/Aenebris#readme
license:             MIT
license-file:        LICENSE
author:              Carter Perez
maintainer:          support@certgames.com
copyright:           2025 Carter Perez
category:            Network, Security, Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     Aenebris.Proxy
                     , Aenebris.Config
                     , Aenebris.Backend
                     , Aenebris.LoadBalancer
                     , Aenebris.HealthCheck
                     , Aenebris.TLS
                     , Aenebris.Connection
                     , Aenebris.Tunnel
                     , Aenebris.Middleware.Security
                     , Aenebris.Middleware.Redirect
                     , Aenebris.RateLimit
                     , Aenebris.DDoS.EarlyData
                     , Aenebris.DDoS.MemoryShed
                     , Aenebris.DDoS.IPJail
                     , Aenebris.DDoS.ConnLimit
                     , Aenebris.Fingerprint.JA4H
                     , Aenebris.WAF.Rule
                     , Aenebris.WAF.Patterns
                     , Aenebris.WAF.Engine
                     , Aenebris.Honeypot
                     , Aenebris.Geo
                     , Aenebris.ML.Features
                     , Aenebris.ML.Model
                     , Aenebris.ML.Loader
                     , Aenebris.ML.Inference
                     , Aenebris.ML.Calibration
                     , Aenebris.ML.IForest
                     , Aenebris.ML.Engine
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , warp >= 3.3
                     , warp-tls >= 3.4
                     , wai >= 3.2
                     , http-types >= 0.12
                     , http-conduit >= 2.3
                     , http-client >= 0.7
                     , bytestring >= 0.11
                     , text >= 2.0
                     , yaml >= 0.11
                     , aeson >= 2.0
                     , async >= 2.2
                     , stm >= 2.5
                     , time >= 1.9
                     , containers >= 0.6
                     , vector >= 0.12
                     , tls >= 2.1
                     , crypton-x509 >= 1.7
                     , crypton-x509-store >= 1.6
                     , crypton-x509-validation >= 1.6
                     , case-insensitive >= 1.2
                     , directory >= 1.3
                     , data-default-class >= 0.1
                     , network >= 3.1
                     , streaming-commons >= 0.2
                     , splice >= 0.6
                     , crypton >= 1.0
                     , memory >= 0.18
                     , regex-tdfa >= 1.3
                     , geoip2 >= 0.4
                     , iproute >= 1.7
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wpartial-fields
                       -Wredundant-constraints

executable aenebris
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aenebris
                     , http-client >= 0.7
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite aenebris-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , aenebris
                     , hspec >= 2.0
                     , wai >= 3.2
                     , wai-extra >= 3.0
                     , http-types >= 0.12
                     , stm >= 2.5
                     , bytestring >= 0.11
                     , text >= 2.0
                     , case-insensitive >= 1.2
                     , time >= 1.9
                     , containers >= 0.6
                     , iproute >= 1.7
                     , network >= 3.1
                     , geoip2 >= 0.4
                     , yaml >= 0.11
                     , vector >= 0.12
  ghc-options:         -Wall
                       -threaded
                       -rtsopts
                       -with-rtsopts=-N

source-repository head
  type:     git
  location: https://github.com/CarterPerez-dev/Cybersecurity-Projects/PROJECTS/Aenebris
